@@ -1,0 +1,9 @@
+package rbasamoyai.createbigcannons.cannon_control.cannon_mount;
+
+import javax.annotation.Nullable;
+
+public interface ExtendsCannonMount {
+
+	@Nullable CannonMountBlockEntity getCannonMount();
+
+}
