@@ -178,7 +178,7 @@ a21c4e4eebeff2daf1f081cd6226f29adfeade7c data\createbigcannons\loot_tables\block
 41712d305133db87c15520651e3aafd331236baf data\createbigcannons\advancements\recipes\createbigcannons\empty_powder_charge.json
 9ea4762a05a584971ebbabbe4aed59f2d83cfca5 data\createbigcannons\recipes\melting\melt_cast_iron_ingot.json
 d532f1f25fdcd45c4c0628d1ee3798f1a06a1415 data\createbigcannons\loot_tables\blocks\unbored_bronze_sliding_breech.json
-586e8913b477e55ffcddb2daa86ab07371cb7d8f assets\createbigcannons\lang\en_us.json
+97b0096505574d57bbf74a6233b9b791086b038d assets\createbigcannons\lang\en_us.json
 ed30fb599beda650e7c03f73f81740f575878072 data\createbigcannons\advancements\recipes\createbigcannons\nethersteel_block.json
 dec72a3d3bdf8f0783b06a066ce558fd44a46878 assets\createbigcannons\models\block\unbored_nethersteel_screw_breech.json
 020c4503bc250b1d631c454763e13240290a257a assets\createbigcannons\models\block\unbored_cast_iron_sliding_breech.json
@@ -361,7 +361,7 @@ dca719fb593d53732e1e08ac40c57a8c994e62db assets\createbigcannons\models\item\ver
 5ddd76a06525dbe65e687e40426392fa0ed69c08 assets\createbigcannons\models\block\cannon_cast.json
 2975e49c94758d2f84a1a2019fbe577db1e3d630 assets\createbigcannons\models\item\sliding_breech_cast_mould.json
 b13e187dc2983854c9936308beb20f03fb5bb686 data\create\block_hardness\item_vault.json
-631422d3069835aaad33cb5bea20c0bb5fce4677 assets\createbigcannons\lang\en_ud.json
+fce0895dfe0154d6227f2860997ce9b2f2b4411d assets\createbigcannons\lang\en_ud.json
 d7617c6538b08d2410e132ef703e47526c25345c data\minecraft\tags\blocks\mineable\axe.json
 847dd1470953cd5956b5f6edb733cdb0bafddd3c assets\createbigcannons\models\block\incomplete_bronze_autocannon_recoil_spring.json
 236281fc879d0281e93d7a9b4f7fadfbed3c31b7 data\createbigcannons\recipes\wrought_iron_cannon_end.json
