@@ -215,6 +215,13 @@
   "cast_shape.createbigcannons.small": "\u05DF\u05DF\u0250\u026FS",
   "cast_shape.createbigcannons.very_large": "\u01DDb\u0279\u0250\uA780 \u028E\u0279\u01DD\u039B",
   "cast_shape.createbigcannons.very_small": "\u05DF\u05DF\u0250\u026FS \u028E\u0279\u01DD\u039B",
+  "createbigcannons.display_source.cannon_mount.cannon_pitch": " :\u0265\u0254\u0287\u0131\u0500 uouu\u0250\u0186",
+  "createbigcannons.display_source.cannon_mount.cannon_yaw": " :\u028D\u0250\u028E uouu\u0250\u0186",
+  "createbigcannons.display_source.cannon_mount.degrees": "\u00BA%s",
+  "createbigcannons.display_source.cannon_mount.for_cannon_status": "sn\u0287\u0250\u0287S uouu\u0250\u0186 \u0279o\u025F",
+  "createbigcannons.display_source.cannon_mount.no_cannon_present": "\u0287u\u01DDs\u01DD\u0279d uouu\u0250\u0186 oN",
+  "createbigcannons.display_source.cannon_mount.not_enough_space": " \u01DD\u0254\u0250ds \u0265bnou\u01DD \u0287oN",
+  "createbigcannons.display_source.cannon_mount_source": "\u0287unoW uouu\u0250\u0186 \u026Fo\u0279\u2132",
   "createbigcannons.gui.autocannon_ammo_container.tracer_spacing": ")s(puno\u0279 %s \u028E\u0279\u01DD\u028C\u018E :bu\u0131\u0254\u0250dS \u0279\u01DD\u0254\u0250\u0279\u27D8",
   "createbigcannons.gui.set_proximity_fuze.distance": "s\u029E\u0254o\u05DFq %s :\u01DD\u0254u\u0250\u0287s\u0131\u15E1 uo\u0131\u0287\u0250uo\u0287\u01DD\u15E1",
   "createbigcannons.gui.set_timed_fuze.time": "s\u029E\u0254\u0131\u0287 %s %ss :\u01DD\u026F\u0131\u27D8 \u01DDzn\u2132",
