@@ -215,6 +215,13 @@
   "cast_shape.createbigcannons.small": "Small",
   "cast_shape.createbigcannons.very_large": "Very Large",
   "cast_shape.createbigcannons.very_small": "Very Small",
+  "createbigcannons.display_source.cannon_mount.cannon_pitch": "Cannon Pitch: ",
+  "createbigcannons.display_source.cannon_mount.cannon_yaw": "Cannon Yaw: ",
+  "createbigcannons.display_source.cannon_mount.degrees": "%s\u00BA",
+  "createbigcannons.display_source.cannon_mount.for_cannon_status": "for Cannon Status",
+  "createbigcannons.display_source.cannon_mount.no_cannon_present": "No Cannon present",
+  "createbigcannons.display_source.cannon_mount.not_enough_space": "Not enough space ",
+  "createbigcannons.display_source.cannon_mount_source": "From Cannon Mount",
   "createbigcannons.gui.autocannon_ammo_container.tracer_spacing": "Tracer Spacing: Every %s round(s)",
   "createbigcannons.gui.set_proximity_fuze.distance": "Detonation Distance: %s blocks",
   "createbigcannons.gui.set_timed_fuze.time": "Fuze Time: %ss %s ticks",
